Added Google map support

--- a/views/page.jade
+++ b/views/page.jade
@@ -3,7 +3,10 @@ html
     head
       title= "Input Output"
       script(src="http://code.jquery.com/jquery-1.9.1.min.js")
-      script(src='/chat.js')
       script(src='/socket.io/socket.io.js')
+      script(src='/chat.js')
+      link(rel='stylesheet', href='/style.css')
+      
     body
         #content
+           #map
