--- a/views/page.jade
+++ b/views/page.jade
@@ -4,6 +4,7 @@ html
       title= "Input Output"
       script(src="http://code.jquery.com/jquery-1.9.1.min.js")
       script(src='/socket.io/socket.io.js')
+      script(type='text/javascript', src='http://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true')
       script(src='/chat.js')
       link(rel='stylesheet', href='/style.css')
       
