--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,16 @@ body {
 	font-size: x-small;
 	background: #333;
 	color: white;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
-#map {
-	width: 500px;
-	height: 500px;
+html {
+	height: 100%;
+}
+
+#map, #content {
+	width: 100%;
+	height: 100%;
 }
